docs: add Phase 7 - Java 24 native access warnings to plan
Document the solution for suppressing Java 24 native access warnings:
- JavaFX native access option in pom.xml
- Maven wrapper upgrade to 3.9.9
- .mvn/jvm.config for Maven native access
- Note about unavoidable Guava sun.misc.Unsafe warning

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>